# e-math

./: Cargo.toml  README.md
src/: complex.rs  euler.rs  fixed.rs  float.rs  lib.rs  mat2x2.rs  mat3x3.rs  mat4x4.rs  matrix.rs  multivec2.rs  multivec3.rs  multivec4.rs  pose.rs  quaternion.rs  rational.rs  real.rs  signed.rs  unsigned.rs  vec2.rs  vec3.rs  vec4.rs  zero.rs
